# Encrypter

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/io/: check_existence.rs  get.rs  get_password.rs  menu.rs  mod.rs  show_menu_options.rs
src/magic_crypt/: decrypt_file.rs  encrypte_file.rs  mod.rs
