[package]
name = "personal_encrypter"
version = "0.1.0"
edition = "2021"
authors = ["Mateo Lafalce <mateo.lafalce04@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic-crypt = "3.1.12"
rpassword = "7.2.0"
termion = "2.0.1"